--- a/styles.css
+++ b/styles.css
@@ -9,19 +9,18 @@
     background-color: rgb(170, 170, 214);
     border-bottom:solid rgb(237,28,36);
     display: flex;
-    justify-content:space-between;
+    justify-content: space-evenly;
     align-items: center;
     padding: 10px;
     position: sticky;
     top: 0px;
-    overflow: hidden;
     z-index: 1000;
 }
 
 
 .navbar{
     width: 100%;
-    justify-content: space-evenly;   
+      
 }
 
 
@@ -360,54 +359,62 @@ label, input, textarea{
     background-color: green;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1278px) {
     .header {
-        background-color: rgb(170, 170, 214);
-        border-bottom:solid rgb(237,28,36);
-        display: flex;
-        justify-content:space-between;
-        align-items: center;
-        padding: 10px;
-        position: sticky;
-        top: 0px;
-        overflow: hidden;
-        z-index: 1000;
+       flex-direction: column;
+       justify-items: center;
+    
     }
-    
-    
-    .navbar{
-        width: 100%;
-        justify-content: space-evenly;   
+
     }
-    
-    
-    .navbar ul{
-        display: flex;
-        justify-content: space-evenly;
-        width: 100%;
-        font-size: 52px;
+
+
+@media screen and (max-width: 1040px) {
+        .header {
+            align-items: center;
+            width: 100%;
+            height: 310px;       
+        }
         
-    }
-    
-    .navbar ul li{
-        list-style-type: none;
-        display: inline;
-        margin-right:10px;
-        text-decoration: none;
-    }
-    
-    nav a{
-        padding: 1rem;
-        text-decoration: none;
-        color: rgb(46,48,147);
-        text-shadow: 4px 4px 6px rgb(34, 35, 110);
-    }
-    
-    nav a:hover{
-        color:rgb(237,28,36) ;
-        transition: color 0.3s ease;
+        .navbar ul{
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            font-size: 190%;
+            
+        }
+        
+        iframe{
+            width: 500px;
+            height: 500px;
+            display: flex;
+            justify-content: center;
+        }
 
+        #logo{
+            align-items: center;
+        }
+    }    
+
+@media screen and (max-width: 375px){
+        * {
+            width: 100%;
+            text-align: center;
+        }
+
+        .home-img{
+            width: 100%;
+            height: 350px;
+        }
+
+        .header{
+            height: 285px;
+        }
+
+        iframe{
+            width: 200px;
+            height: 350px;
+            display: flex;
+            justify-content: center;
+        }
     }
-}
-
-
